build: unify Maven release packaging and validate macOS candidate